tests/NormalTests/paczka1/fuzzy1/63514417.err
Error in line 8: zldK59 A192 86,4
Error in line 3: voX2LvYeUf A361 53,2
Error in line 13: zsi A53 70,3
Error in line 31: wH3yGyVI2 A53 6,5
Error in line 15: ZoiDC A361 73,5
Error in line 33: wH3yGyVI2 A75 96,6
Error in line 35: ZoiDC A192 33,7
